--- a/style.scss
+++ b/style.scss
@@ -11,5 +11,171 @@ html{
     padding: 0;
 }
 body{
-    height: 100vh;
+    min-height: 100vh;
+    width: 100vw;
+    font-family: 'Manrope', sans-serif;
+    font-family: 'Rubik', sans-serif;
+    background-color: $veryDarkBlue;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    @include breakpoint-down(medium){
+        padding: 10vw;
+    }
 }
+
+.grid{
+    display: grid;
+    grid-template-columns: repeat(4, 17vw);
+    grid-template-rows: repeat(2, 24vh);
+    margin-bottom: 30px;
+    grid-template-areas: 
+    "A B C D"
+    "A E F G";
+    gap: 3vw;
+    
+    @include breakpoint-down(medium){
+        grid-template-rows: repeat(4, 40vw);
+        grid-template-columns: repeat(2, 40vw);
+        grid-template-areas: 
+        "A A"
+        "B C"
+        "D E"
+        "F G";
+        gap: 20px;
+    }
+    @include breakpoint-down(small){
+        grid-template-columns: 80vw;
+        grid-template-rows: repeat(8, 55vw);
+        grid-template-areas: 
+        "A"
+        "B"
+        "C"
+        "D"
+        "E"
+        "F"
+        "G"
+        "H";
+        gap: 20px;
+    }
+    &__user{
+        background-color: $darkblue;
+        grid-area: A;
+        border-radius: $borderRadius;
+        &__main{
+            background-color: $blue;
+            border-radius: $borderRadius;
+            padding: 30px;
+            padding-bottom: 0;
+            @include breakpoint-down(small){
+                display: flex;
+                align-items: center;
+                padding: 30px;
+
+            }
+            .text{
+                
+                @include breakpoint-down(small){
+
+                }
+                p{
+                    color: $paleBlue;
+                    @include breakpoint-down(small){
+
+                    }
+                }
+                h1{
+                    font-weight: 300;
+                    padding-bottom: 80px;
+                    @include breakpoint-down(small){
+                        font-size: 25px;
+                        padding: 0;
+                    }
+                }
+                
+            }
+            &__portrait{
+                width: 84px;
+                height: 84px;
+                background-image: url(image-jeremy.png);
+                background-size: contain;
+                border-radius: 50%;
+                border: solid 4px white;
+                margin-bottom: 40px;
+                @include breakpoint-down(small){
+                    width: 70px;
+                    height: 70px;
+                    margin-bottom: 0;
+                    margin-right: 20px;
+
+                }
+            }
+            
+        }
+        &__scale{
+            display: flex;
+            flex-direction: column;
+            padding: 30px;
+            @include breakpoint-down(small){
+                flex-direction: row;
+                justify-content: space-around;
+                align-items: center;
+            }
+            a{
+                color: $paleBlue;
+                text-decoration: none;
+                color: 18px;
+                padding-bottom: 24px;
+                font-weight: 400;
+                &:hover{
+                    color: white;
+                }
+                @include breakpoint-down(small){
+                    font-size: 20px;
+                }
+            }
+        }
+
+    }
+    &__item{
+        background-color: $lightRed;
+        padding-top: 45px;
+        border-radius: $borderRadius;
+        background-image: url(/icon-study.svg);
+        background-repeat: no-repeat;
+        background-position: right top;
+
+        
+        &__content{
+            background-color: $darkblue;
+            border-radius: $borderRadius;
+            
+            height: 100%;
+            padding: 30px;
+            &__header{
+                display: flex;
+                justify-content: space-between;
+                &__category{
+                    margin-bottom: 35px;
+                }
+                a{
+                    color: white;
+                    text-decoration: none;
+                    font-size: 20px;
+                    text-align: center;
+                }
+            }
+            
+            &__time{
+                font-size: 45px;
+            }
+            &__previousTime{
+
+            }
+            
+        }
+    }
+}
+
