--- a/_variables.scss
+++ b/_variables.scss
@@ -1,5 +1,5 @@
 $blue: hsl(246, 80%, 60%);
-$lightRed : hsl(15, 100%, 70%); // (work)
+$orange : hsl(15, 100%, 70%); // (work)
 $softBlue : hsl(195, 74%, 62%); //(play)
 $lightRed : hsl(348, 100%, 68%); // (study)
 $limeGreen : hsl(145, 58%, 55%); // (exercise)
