--- a/style.css
+++ b/style.css
@@ -182,22 +182,32 @@ body {
   }
 }
 
-.grid__user__scale a {
+.grid__user__scale button {
   color: #bdc1ff;
   text-decoration: none;
+  text-align: center;
+  background-color: #1c1f4a;
+  border: none;
   color: 18px;
   padding-bottom: 24px;
   font-weight: 400;
+  font-size: 20px;
+  height: 10px;
 }
 
-.grid__user__scale a:hover {
+.grid__user__scale button:hover {
   color: white;
+  cursor: pointer;
 }
 
 @media (max-width: 43.125em) {
-  .grid__user__scale a {
+  .grid__user__scale button {
     font-size: 20px;
   }
+}
+
+.grid__user__scale button.active {
+  color: white;
 }
 
 .grid__item {
@@ -260,6 +270,7 @@ body {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  position: relative;
 }
 
 .grid__item__content__header__category {
@@ -281,12 +292,16 @@ body {
 .grid__item__content__header a {
   color: white;
   text-decoration: none;
-  font-size: 20px;
+  font-size: 40px;
   text-align: center;
+  position: absolute;
+  left: 100%;
+  -webkit-transform: translateX(-100%) translateY(-50%);
+          transform: translateX(-100%) translateY(-50%);
 }
 
 .grid__item__content__time {
-  font-size: 45px;
+  font-size: 3vw;
 }
 
 @media (max-width: 64rem) {
