--- a/style.scss
+++ b/style.scss
@@ -130,18 +130,27 @@ body{
                 justify-content: space-around;
                 align-items: center;
             }
-            a{
+            button{
                 color: $paleBlue;
                 text-decoration: none;
+                text-align: center;
+                background-color: $darkblue;
+                border: none;
                 color: 18px;
                 padding-bottom: 24px;
                 font-weight: 400;
+                font-size: 20px;
+                height: 10px;
                 &:hover{
                     color: white;
+                    cursor: pointer;
                 }
                 @include breakpoint-down(small){
                     font-size: 20px;
                 }
+            }
+            button.active{
+                color: white;
             }
         }
 
@@ -194,6 +203,7 @@ body{
             &__header{
                 display: flex;
                 justify-content: space-between;
+                position: relative;
                 &__category{
                     margin-bottom: 35px;
                     @include breakpoint-down(medium){
@@ -206,13 +216,16 @@ body{
                 a{
                     color: white;
                     text-decoration: none;
-                    font-size: 20px;
+                    font-size: 40px;
                     text-align: center;
+                    position: absolute;
+                    left: 100%;
+                    transform: translateX(-100%) translateY(-50%);
                 }
             }
             
             &__time{
-                font-size: 45px;
+                font-size: 3vw;
                 @include breakpoint-down(medium){
                     position: absolute;
                     bottom: 50%;
